refactor: ajustes na camada de rotas
